# hft-orderbook

./: README.md  benchmark.py  orderbook_tests.py
.github/workflows/: ci.yml  uv.yml
bindings/nodejs/: README.md  index.js  package.json  test.js
bindings/python/: __init__.py  lob.py
bindings/python/rust_core/: Cargo.toml
bindings/python/rust_core/src/: lib.rs
docs/: CriticalFlows.md  DataSchema.md  PRD.md  SolutionArchitecture.md  SystemDesign.md
